--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,7 +14,7 @@
 
 <!-- End Google Tag Manager -->
 
-<title>Home | Raditian</title>
+<title>Shreyansh Saha</title>
 <style>
     /* Fade In animation triggering after font load or 3s timeout */
     .rad-fade-in {
