Fixed the navbar

--- a/layouts/partials/experience.html
+++ b/layouts/partials/experience.html
@@ -1,5 +1,5 @@
 {{ if .Site.Data.homepage.experience.enable }}
-<section class="section section--border-bottom rad-animation-group">
+<section id="experience" class="section section--border-bottom rad-animation-group">
     <div class="container">
         <div class="row flex-column-reverse flex-md-row rad-fade-down">
             <div class="col-12 col-sm-6 mt-5 mt-sm-0">
