--- a/layouts/partials/education.html
+++ b/layouts/partials/education.html
@@ -1,5 +1,5 @@
 {{ if .Site.Data.homepage.education.enable }}
-<section class="section section--border-bottom rad-animation-group">
+<section id="education" class="section section--border-bottom rad-animation-group">
     <div class="container">
         <div class="row rad-fade-down">
             <div class="col-12">
