--- a/layouts/partials/base-foot.html
+++ b/layouts/partials/base-foot.html
@@ -1,7 +1,7 @@
 <script src='{{ "js/rad-animations.js" | absURL }}'></script>
 <script src='{{ "js/library/lozad.min.js" | absURL }}'></script>
 <script>
-  window.addEventListener("load", function() {
+  window.addEventListener("load", function () {
     var observer = window.lozad(".lozad", {
       rootMargin: window.innerHeight / 2 + "px 0px",
       threshold: 0.01
@@ -15,7 +15,7 @@
 <script src='{{ "js/library/smooth-scroll.polyfills.min.js" | absURL }}'></script>
 <script src='{{ "js/library/fontfaceobserver.js" | absURL }}'></script>
 <script>
-  (function(w) {
+  (function (w) {
     // if the class is already set, we're good.
     if (w.document.documentElement.className.indexOf("fonts-loaded") > -1) {
       return;
@@ -38,17 +38,19 @@
     var fontF = new w.FontFaceObserver("Inter", {
       weight: 900
     });
-    w.Promise.all([fontA.load(), fontC.load(), fontF.load()]).then(function() {
+    w.Promise.all([fontA.load(), fontC.load(), fontF.load()]).then(function () {
       w.document.documentElement.className += " fonts-loaded";
     });
   })(this);
 </script>
 <script>
-  const scroll = new SmoothScroll('a[href*="#"]');
-    $('a.nav-link').on('click', () => {
-      const navbar = $('.navbar-collapse');
-      if (navbar && navbar.hasClass('show')) {
-        $('.navbar-toggler').click();
-      }
-    })
+  const scroll = new SmoothScroll('a[href*="#"]', {
+    offset: 50
+  });
+  $('a.nav-link').on('click', () => {
+    const navbar = $('.navbar-collapse');
+    if (navbar && navbar.hasClass('show')) {
+      $('.navbar-toggler').click();
+    }
+  })
 </script>
