--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -33,8 +33,8 @@
                     </form>
                 </div>
                 <div class="col-12 col-lg-5 contact__info">
-                    <h4>{{ .Site.Data.homepage.contact.phone.title }}</h4>
-                    <span>{{ .Site.Data.homepage.contact.phone.number }}</span>
+                    <!-- <h4>{{ .Site.Data.homepage.contact.phone.title }}</h4> -->
+                    <!-- <span>{{ .Site.Data.homepage.contact.phone.number }}</span> -->
                     <h4>{{ .Site.Data.homepage.contact.email.title }}</h4>
                     <span>{{ .Site.Data.homepage.contact.email.email | safeHTML }}</span>
                     <h4>{{ .Site.Data.homepage.contact.address.title }}</h4>
